--- a/nagios.cfg
+++ b/nagios.cfg
@@ -1,6 +1,6 @@
 ##############################################################################
 #
-# NAGIOS.CFG - Sample Main Config File for Nagios 4.1.1
+# NAGIOS.CFG - Sample Main Config File for Nagios 4.2.4
 #
 # Read the documentation for more information on this configuration
 # file.  I've provided some comments here, but things may not be so
@@ -16,7 +16,7 @@
 # in the config file!!!
 
 log_file=/usr/local/nagios/var/nagios.log
-
+cfg_file=/usr/local/nagios/etc/objects/Terraria.cfg
 
 
 # OBJECT CONFIGURATION FILE(S)
@@ -38,7 +38,7 @@ cfg_file=/usr/local/nagios/etc/objects/localhost.cfg
 #cfg_file=/usr/local/nagios/etc/objects/windows.cfg
 
 # Definitions for monitoring a router/switch
-#cfg_file=/usr/local/nagios/etc/objects/switch.cfg
+cfg_file=/usr/local/nagios/etc/objects/switch.cfg
 
 # Definitions for monitoring a network printer
 #cfg_file=/usr/local/nagios/etc/objects/printer.cfg
@@ -48,7 +48,7 @@ cfg_file=/usr/local/nagios/etc/objects/localhost.cfg
 # extension) in a particular directory by using the cfg_dir
 # directive as shown below:
 
-cfg_dir=/usr/local/nagios/etc/servers
+#cfg_dir=/usr/local/nagios/etc/servers
 #cfg_dir=/usr/local/nagios/etc/printers
 #cfg_dir=/usr/local/nagios/etc/switches
 #cfg_dir=/usr/local/nagios/etc/routers
